Merge of bugfix450 and enhancements460 branch
git-svn-id: http://svn.codehaus.org/esper/esper/trunk@3005 d91eb1b3-1215-0410-9718-d41490442091